--- a/Classification/GroupImageModel/NN_brain_tumour_classification.ipynb
+++ b/Classification/GroupImageModel/NN_brain_tumour_classification.ipynb
@@ -98,27 +98,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total images:  5\n",
-      "Training:  4\n",
-      "Validation:  0\n",
-      "Testing:  1\n",
-      "Train copied successfully.\n",
-      "Error occurred while copying file.\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/rachelrenegado/Desktop/Winter2022/BMEN415/BMEN415_Final_Project/Classification/GroupImageModel/data/Brain_Tumor/Images/Brain_Tumor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 22>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Creating partitions of the data after shuffeling\u001b[39;00m\n\u001b[1;32m     20\u001b[0m src \u001b[38;5;241m=\u001b[39m root_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;66;03m# Folder to copy images from\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m allFileNames \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mshuffle(allFileNames)\n\u001b[1;32m     24\u001b[0m train_FileNames, val_FileNames, test_FileNames \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msplit(np\u001b[38;5;241m.\u001b[39marray(allFileNames),\n\u001b[1;32m     25\u001b[0m                                                           [\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(allFileNames)\u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m (val_ratio \u001b[38;5;241m+\u001b[39m test_ratio))), \n\u001b[1;32m     26\u001b[0m                                                            \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(allFileNames)\u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m test_ratio))])\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/rachelrenegado/Desktop/Winter2022/BMEN415/BMEN415_Final_Project/Classification/GroupImageModel/data/Brain_Tumor/Images/Brain_Tumor'"
      ]
     }
    ],
    "source": [
     "classes = ['Healthy', 'Brain_Tumor'] #labels\n",
     "\n",
+    "# choosing to use jpg\n",
+    "\n",
+    "# source 1: https://www.geeksforgeeks.org/python-shutil-copy-method/\n",
+    "# source 2: https://www.kaggle.com/questions-and-answers/102677\n",
     "import shutil\n",
-    "root_dir = '/Users/rachelrenegado/Desktop/Winter2022/BMEN415/BMEN415_Final_Project/Classification/GroupImageModel/data/' # data root path\n",
+    "root_dir = '/Users/rachelrenegado/Desktop/Winter2022/BMEN415/BMEN415_Final_Project/Classification/GroupImageModel/data/Brain_Tumor/Images/' # data root path\n",
     "\n",
     "val_ratio = 0.15\n",
     "test_ratio = 0.05\n",
@@ -174,6 +177,13 @@
     "except:\n",
     "    print(\"Error occurred while copying file.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
