--- a/Classification/Lena/Feta_Health-Logistic_Regression.ipynb
+++ b/Classification/Lena/Feta_Health-Logistic_Regression.ipynb
@@ -968,6 +968,57 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split \n",
+    "from sklearn.linear_model import LinearRegression \n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(Xr, yr, test_size=0.3, stratify = yr, shuffle = True, random_state =42)\n",
+    "\n",
+    "# X_train = X_train.reshape(-1,1)\n",
+    "# X_test = X_test.reshape(-1,1)\n",
+    "\n",
+    "\n",
+    "#creating the linear Regression model \n",
+    "model = LinearRegression().fit(X_train,y_train)\n",
+    "#model.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 0.6221553187482438\n"
+     ]
+    }
+   ],
+   "source": [
+    "#predicting the outcome based on the regression model from above \n",
+    "y_predict = model.predict(X_test)\n",
+    "\n",
+    "#checking the accuracy of the training data \n",
+    "train_acc = model.score(X_train, y_train)\n",
+    "\n",
+    "print('Training Accuracy:', train_acc) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1004,6 +1055,11 @@
     "\n",
     "\n",
     "x_train,x_test, y_train, y_test = train_test_split(Xr,yr,test_size = 0.30, stratify = yr, shuffle = True, random_state = 42)\n",
+    "\n",
+    "#OneVsRestClassifier is a strategy consisting in fitting one classifier per class \n",
+    "#Pipeline are a sequence of data processing mechanism \n",
+    "\n",
+    "\n",
     "\n",
     "model = Pipeline([('scaler', StandardScaler()), ('classifier', OneVsRestClassifier(LogisticRegression()))])\n",
     "\n",
