--- a/Classification/Lena/Feta_Health-Logistic_Regression.ipynb
+++ b/Classification/Lena/Feta_Health-Logistic_Regression.ipynb
@@ -966,12 +966,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lena_le/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split \n",
-    "from sklearn.linear_model import LinearRegression \n",
+    "from sklearn.linear_model import LogisticRegression \n",
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(Xr, yr, test_size=0.3, stratify = yr, shuffle = True, random_state =42)\n",
@@ -981,7 +996,7 @@
     "\n",
     "\n",
     "#creating the linear Regression model \n",
-    "model = LinearRegression().fit(X_train,y_train)\n",
+    "model = LogisticRegression().fit(X_train,y_train)\n",
     "#model.fit(X_train, y_train)\n",
     "\n",
     "\n",
@@ -990,14 +1005,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.6221553187482438\n"
+      "Training Accuracy: 0.8735632183908046\n"
      ]
     }
    ],
