Updated files to match

--- a/Regression/Rachel/MLP_Model.ipynb
+++ b/Regression/Rachel/MLP_Model.ipynb
@@ -794,8 +794,7 @@
     }
    ],
    "source": [
-    "model = MLPRegressor(hidden_layer_sizes=(64,64,64),activation=\"relu\" ,random_state=1, max_iter=500).fit(x_train, y_train)\n",
-    "model.fit(x_train, y_train)"
+    "model = MLPRegressor(hidden_layer_sizes=(64,64,64),activation=\"relu\" ,random_state=1, max_iter=500).fit(x_train, y_train)"
    ]
   },
   {
@@ -827,6 +826,75 @@
     "print(\"Root Mean squared error: \" + str(metrics.mean_squared_error(y_test, y_pred, squared=False)))\n",
     "print(\"R2: \" + str(metrics.r2_score(y_test, y_pred)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6b8fc66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min MSE: 89.42988314222424at n_components=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
+    "model2 = LinearRegression()\n",
+    "model2.fit(x_train,y_train)\n",
+    "\n",
+    "Y_pred_train = model2.predict(x_train)\n",
+    "Y_pred_validate = model2.predict(x_val)\n",
+    "\n",
+    "train_accuracy[i] = metrics.mean_squared_error(Y_pred_train, Y_pred_train)\n",
+    "validation_accuracy[i] = metrics.mean_squared_error(y_val, Y_pred_validate)\n",
+    "\n",
+    "\n",
+    "print(\"Min MSE: \" + str(min(mse_res)) + \"at n_components=\" + str(list(mse_res).index(min(mse_res)) + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6f1be9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained variance: 0.7844382373882087\n",
+      "Max Error: 23.21655428481911\n",
+      "Mean absolute error: 7.629438384384331\n",
+      "Mean squared error: 84.5225339084315\n",
+      "Root Mean squared error: 9.193613756756998\n",
+      "R2: 0.784430087194207\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred=model2.predict(x_test)\n",
+    "\n",
+    "print(\"Explained variance: \" + str(metrics.explained_variance_score(y_test, y_pred)))\n",
+    "print(\"Max Error: \" + str(metrics.max_error(y_test, y_pred)))\n",
+    "print(\"Mean absolute error: \" + str(metrics.mean_absolute_error(y_test, y_pred)))\n",
+    "print(\"Mean squared error: \" + str(metrics.mean_squared_error(y_test, y_pred)))\n",
+    "print(\"Root Mean squared error: \" + str(metrics.mean_squared_error(y_test, y_pred, squared=False)))\n",
+    "print(\"R2: \" + str(metrics.r2_score(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d0894f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
