made some changes

--- a/Classification/Lena/NeuralNets.ipynb
+++ b/Classification/Lena/NeuralNets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ebc97354",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "ccd6b2c2",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "4f7438bb",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "df78ee04",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "094d8485",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
     "X_val, X_test, y_val, y_test = train_test_split(X_validation, y_validation, test_size=0.25, random_state=33)\n",
     "\n",
     "\n",
-    "model = MLPClassifier(solver='adam',hidden_layer_sizes=(15,), random_state=1,max_iter=2000)\n",
+    "model = MLPClassifier(solver='adam',hidden_layer_sizes=(30,), random_state=1,max_iter=2000) #Multilayer Perceptron NN\n",
     "\n",
     "model.fit(X_train, y_train)\n",
     "ypred = model.predict(X_test)\n"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "1fc28bb6",
    "metadata": {},
    "outputs": [
@@ -145,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy:  0.8541176470588235\n",
-      "Val Accuracy:  0.8589341692789969\n"
+      "Train Accuracy:  0.88\n",
+      "Val Accuracy:  0.8683385579937304\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "470c2d67",
    "metadata": {},
    "outputs": [
@@ -166,19 +166,19 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[82  0  1]\n",
-      " [12  3  2]\n",
+      "[[81  0  2]\n",
+      " [ 7 10  0]\n",
       " [ 1  0  6]]\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.86      0.99      0.92        83\n",
-      "         2.0       1.00      0.18      0.30        17\n",
-      "         3.0       0.67      0.86      0.75         7\n",
+      "         1.0       0.91      0.98      0.94        83\n",
+      "         2.0       1.00      0.59      0.74        17\n",
+      "         3.0       0.75      0.86      0.80         7\n",
       "\n",
-      "    accuracy                           0.85       107\n",
-      "   macro avg       0.84      0.67      0.66       107\n",
-      "weighted avg       0.87      0.85      0.81       107\n",
+      "    accuracy                           0.91       107\n",
+      "   macro avg       0.89      0.81      0.83       107\n",
+      "weighted avg       0.91      0.91      0.90       107\n",
       "\n"
      ]
     }
