--- a/Regression/Nick/CubistTree.ipynb
+++ b/Regression/Nick/CubistTree.ipynb
@@ -31,7 +31,7 @@
     "import sklearn.metrics as metrics\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
-    "from cubist import Cubist"
+    "from cubist import Cubist "
    ]
   },
   {
@@ -737,6 +737,14 @@
     "pca_df = pd.DataFrame(data=pca_dataF, columns=columns)\n",
     "pca_df.head()\n",
     "pca_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2878fed",
+   "metadata": {},
+   "source": [
+    "## Heatmap"
    ]
   },
   {
