--- a/Regression/Nick/NeuralNet.ipynb
+++ b/Regression/Nick/NeuralNet.ipynb
@@ -745,6 +745,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ceae10f",
+   "metadata": {},
+   "source": [
+    "## Heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "aa426ffc",
@@ -949,13 +957,7 @@
       "14/14 [==============================] - 0s 14ms/step - loss: 2.8924 - mean_absolute_error: 2.8924 - val_loss: 6.2924 - val_mean_absolute_error: 6.2924\n",
       "Epoch 49/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 3.2488 - mean_absolute_error: 3.2488 - val_loss: 6.1434 - val_mean_absolute_error: 6.1434\n",
-      "Epoch 50/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 50/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 2.7387 - mean_absolute_error: 2.7387 - val_loss: 6.1261 - val_mean_absolute_error: 6.1261\n",
       "Epoch 51/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 2.6637 - mean_absolute_error: 2.6637 - val_loss: 6.1047 - val_mean_absolute_error: 6.1047\n",
@@ -1157,13 +1159,7 @@
       "14/14 [==============================] - 0s 21ms/step - loss: 1.1686 - mean_absolute_error: 1.1686 - val_loss: 6.3257 - val_mean_absolute_error: 6.3257\n",
       "Epoch 147/2000\n",
       "14/14 [==============================] - 0s 18ms/step - loss: 1.3765 - mean_absolute_error: 1.3765 - val_loss: 6.1667 - val_mean_absolute_error: 6.1667\n",
-      "Epoch 148/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 148/2000\n",
       "14/14 [==============================] - 0s 19ms/step - loss: 1.2553 - mean_absolute_error: 1.2553 - val_loss: 6.2662 - val_mean_absolute_error: 6.2662\n",
       "Epoch 149/2000\n",
       "14/14 [==============================] - 0s 20ms/step - loss: 1.2160 - mean_absolute_error: 1.2160 - val_loss: 6.0990 - val_mean_absolute_error: 6.0990\n",
@@ -1365,13 +1361,7 @@
       "14/14 [==============================] - 0s 22ms/step - loss: 1.5840 - mean_absolute_error: 1.5840 - val_loss: 5.9368 - val_mean_absolute_error: 5.9368\n",
       "Epoch 245/2000\n",
       "14/14 [==============================] - 0s 17ms/step - loss: 1.0409 - mean_absolute_error: 1.0409 - val_loss: 5.8600 - val_mean_absolute_error: 5.8600\n",
-      "Epoch 246/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 246/2000\n",
       "14/14 [==============================] - 0s 15ms/step - loss: 0.9144 - mean_absolute_error: 0.9144 - val_loss: 5.8931 - val_mean_absolute_error: 5.8931\n",
       "Epoch 247/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 0.9165 - mean_absolute_error: 0.9165 - val_loss: 5.9444 - val_mean_absolute_error: 5.9444\n",
@@ -1573,13 +1563,7 @@
       "14/14 [==============================] - 0s 13ms/step - loss: 0.7774 - mean_absolute_error: 0.7774 - val_loss: 5.7862 - val_mean_absolute_error: 5.7862\n",
       "Epoch 343/2000\n",
       "14/14 [==============================] - 0s 13ms/step - loss: 0.7405 - mean_absolute_error: 0.7405 - val_loss: 5.8543 - val_mean_absolute_error: 5.8543\n",
-      "Epoch 344/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 344/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 0.7638 - mean_absolute_error: 0.7638 - val_loss: 5.8776 - val_mean_absolute_error: 5.8776\n",
       "Epoch 345/2000\n",
       "14/14 [==============================] - 0s 20ms/step - loss: 0.9201 - mean_absolute_error: 0.9201 - val_loss: 6.0261 - val_mean_absolute_error: 6.0261\n",
@@ -1781,13 +1765,7 @@
       "14/14 [==============================] - 0s 26ms/step - loss: 0.8663 - mean_absolute_error: 0.8663 - val_loss: 5.8214 - val_mean_absolute_error: 5.8214\n",
       "Epoch 441/2000\n",
       "14/14 [==============================] - 0s 24ms/step - loss: 0.8880 - mean_absolute_error: 0.8880 - val_loss: 5.7543 - val_mean_absolute_error: 5.7543\n",
-      "Epoch 442/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 442/2000\n",
       "14/14 [==============================] - 0s 30ms/step - loss: 0.8976 - mean_absolute_error: 0.8976 - val_loss: 5.7492 - val_mean_absolute_error: 5.7492\n",
       "Epoch 443/2000\n",
       "14/14 [==============================] - 0s 25ms/step - loss: 0.9342 - mean_absolute_error: 0.9342 - val_loss: 5.7795 - val_mean_absolute_error: 5.7795\n",
@@ -1989,13 +1967,7 @@
       "14/14 [==============================] - 0s 13ms/step - loss: 0.8397 - mean_absolute_error: 0.8397 - val_loss: 5.7266 - val_mean_absolute_error: 5.7266\n",
       "Epoch 539/2000\n",
       "14/14 [==============================] - 0s 13ms/step - loss: 0.7848 - mean_absolute_error: 0.7848 - val_loss: 5.6736 - val_mean_absolute_error: 5.6736\n",
-      "Epoch 540/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 540/2000\n",
       "14/14 [==============================] - 0s 13ms/step - loss: 0.7575 - mean_absolute_error: 0.7575 - val_loss: 5.7353 - val_mean_absolute_error: 5.7353\n",
       "Epoch 541/2000\n",
       "14/14 [==============================] - 0s 13ms/step - loss: 0.7000 - mean_absolute_error: 0.7000 - val_loss: 5.8947 - val_mean_absolute_error: 5.8947\n",
@@ -2197,13 +2169,7 @@
       "14/14 [==============================] - 0s 16ms/step - loss: 1.1231 - mean_absolute_error: 1.1231 - val_loss: 5.7412 - val_mean_absolute_error: 5.7412\n",
       "Epoch 637/2000\n",
       "14/14 [==============================] - 0s 14ms/step - loss: 0.9680 - mean_absolute_error: 0.9680 - val_loss: 5.7216 - val_mean_absolute_error: 5.7216\n",
-      "Epoch 638/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 638/2000\n",
       "14/14 [==============================] - 0s 17ms/step - loss: 0.8594 - mean_absolute_error: 0.8594 - val_loss: 5.6909 - val_mean_absolute_error: 5.6909\n",
       "Epoch 639/2000\n",
       "14/14 [==============================] - 0s 15ms/step - loss: 0.6586 - mean_absolute_error: 0.6586 - val_loss: 5.6385 - val_mean_absolute_error: 5.6385\n",
@@ -2509,13 +2475,7 @@
       "14/14 [==============================] - 0s 22ms/step - loss: 0.6010 - mean_absolute_error: 0.6010 - val_loss: 5.6048 - val_mean_absolute_error: 5.6048\n",
       "Epoch 784/2000\n",
       "14/14 [==============================] - 0s 21ms/step - loss: 0.6283 - mean_absolute_error: 0.6283 - val_loss: 5.5799 - val_mean_absolute_error: 5.5799\n",
-      "Epoch 785/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 785/2000\n",
       "14/14 [==============================] - 0s 21ms/step - loss: 0.6591 - mean_absolute_error: 0.6591 - val_loss: 5.6191 - val_mean_absolute_error: 5.6191\n",
       "Epoch 786/2000\n",
       "14/14 [==============================] - 0s 19ms/step - loss: 0.6424 - mean_absolute_error: 0.6424 - val_loss: 5.6164 - val_mean_absolute_error: 5.6164\n",
@@ -2717,13 +2677,7 @@
       "14/14 [==============================] - 0s 23ms/step - loss: 0.5476 - mean_absolute_error: 0.5476 - val_loss: 5.5487 - val_mean_absolute_error: 5.5487\n",
       "Epoch 882/2000\n",
       "14/14 [==============================] - 0s 23ms/step - loss: 0.8844 - mean_absolute_error: 0.8844 - val_loss: 5.5617 - val_mean_absolute_error: 5.5617\n",
-      "Epoch 883/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 883/2000\n",
       "14/14 [==============================] - 0s 23ms/step - loss: 0.8810 - mean_absolute_error: 0.8810 - val_loss: 5.5596 - val_mean_absolute_error: 5.5596\n",
       "Epoch 884/2000\n",
       "14/14 [==============================] - 0s 22ms/step - loss: 0.8815 - mean_absolute_error: 0.8815 - val_loss: 5.5519 - val_mean_absolute_error: 5.5519\n",
@@ -2925,13 +2879,7 @@
       "14/14 [==============================] - 0s 21ms/step - loss: 0.5956 - mean_absolute_error: 0.5956 - val_loss: 5.4973 - val_mean_absolute_error: 5.4973\n",
       "Epoch 980/2000\n",
       "14/14 [==============================] - 0s 21ms/step - loss: 0.5874 - mean_absolute_error: 0.5874 - val_loss: 5.5802 - val_mean_absolute_error: 5.5802\n",
-      "Epoch 981/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 981/2000\n",
       "14/14 [==============================] - 0s 19ms/step - loss: 0.6661 - mean_absolute_error: 0.6661 - val_loss: 5.5464 - val_mean_absolute_error: 5.5464\n",
       "Epoch 982/2000\n",
       "14/14 [==============================] - 0s 23ms/step - loss: 0.6188 - mean_absolute_error: 0.6188 - val_loss: 5.4423 - val_mean_absolute_error: 5.4423\n",
@@ -3963,13 +3911,7 @@
       "14/14 [==============================] - 0s 15ms/step - loss: 0.4460 - mean_absolute_error: 0.4460 - val_loss: 5.3085 - val_mean_absolute_error: 5.3085\n",
       "Epoch 1469/2000\n",
       "14/14 [==============================] - 0s 22ms/step - loss: 0.4078 - mean_absolute_error: 0.4078 - val_loss: 5.3146 - val_mean_absolute_error: 5.3146\n",
-      "Epoch 1470/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1470/2000\n",
       "14/14 [==============================] - 0s 24ms/step - loss: 0.4771 - mean_absolute_error: 0.4771 - val_loss: 5.3371 - val_mean_absolute_error: 5.3371\n",
       "Epoch 1471/2000\n",
       "14/14 [==============================] - 0s 33ms/step - loss: 0.4750 - mean_absolute_error: 0.4750 - val_loss: 5.3098 - val_mean_absolute_error: 5.3098\n",
@@ -4897,13 +4839,7 @@
       "14/14 [==============================] - 0s 23ms/step - loss: 0.4356 - mean_absolute_error: 0.4356 - val_loss: 5.2337 - val_mean_absolute_error: 5.2337\n",
       "Epoch 1909/2000\n",
       "14/14 [==============================] - 1s 48ms/step - loss: 0.4550 - mean_absolute_error: 0.4550 - val_loss: 5.2403 - val_mean_absolute_error: 5.2403\n",
-      "Epoch 1910/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1910/2000\n",
       "14/14 [==============================] - 0s 29ms/step - loss: 0.3677 - mean_absolute_error: 0.3677 - val_loss: 5.1983 - val_mean_absolute_error: 5.1983\n",
       "Epoch 1911/2000\n",
       "14/14 [==============================] - 0s 18ms/step - loss: 0.4265 - mean_absolute_error: 0.4265 - val_loss: 5.2568 - val_mean_absolute_error: 5.2568\n",
