--- a/Regression/Nick/NeuralNet.ipynb
+++ b/Regression/Nick/NeuralNet.ipynb
@@ -5,7 +5,7 @@
    "id": "ad78adfc",
    "metadata": {},
    "source": [
-    "# Neural Net to Predict Age"
+    "# Neural Net to Predict Age\n"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1bff6035",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "054bb5ba",
    "metadata": {},
    "outputs": [
@@ -379,13 +379,14 @@
        "[8 rows x 138 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(\"./Volumetric_features.csv\")\n",
+    "\n",
     "\n",
     "data_features = pd.DataFrame(data, columns = data.columns[:-1])\n",
     "data_features = data_features.drop(['S.No','Age'], axis=1)\n",
